--- a/M2_L4_gradient_exercise.ipynb
+++ b/M2_L4_gradient_exercise.ipynb
@@ -152,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".conda-default:Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-default-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
